[gd_scene load_steps=54 format=3 uid="uid://cpj1husheukf0"]

[ext_resource type="Script" path="res://Source/Actors/Enemies/goblin.gd" id="1_f6oy3"]
[ext_resource type="Texture2D" uid="uid://ng3te7akcnf3" path="res://Assets/Enemy Assets/Goblin/Attack.png" id="1_h6rtr"]
[ext_resource type="Texture2D" uid="uid://bsefe3uydqdwx" path="res://Assets/Enemy Assets/Goblin/Idle.png" id="1_wfwu2"]
[ext_resource type="Texture2D" uid="uid://cfn5irjvvhh65" path="res://Assets/Enemy Assets/Goblin/Death.png" id="2_hgn4g"]
[ext_resource type="Texture2D" uid="uid://retugmhw4y0" path="res://Assets/Enemy Assets/Goblin/Run.png" id="2_mhh77"]
[ext_resource type="PackedScene" uid="uid://behanqrisr7aq" path="res://Source/Actors/Actor Resources/Actor Detection/actor_detection_zone.tscn" id="6_wvijm"]
[ext_resource type="PackedScene" uid="uid://cyavki3bjyjgv" path="res://Source/Actors/Actor Resources/Hitboxes and Hurtboxes/hitbox.tscn" id="7_emsn0"]
[ext_resource type="PackedScene" uid="uid://c4rfywn5u7hkk" path="res://Source/Actors/Actor Resources/Hitboxes and Hurtboxes/hurtbox.tscn" id="8_h7abw"]
[ext_resource type="Texture2D" uid="uid://c41i7ngssy6v8" path="res://Assets/UI Assets/H_M_S Bars/HealthBarCROPPED.png" id="9_cxccl"]
[ext_resource type="Texture2D" uid="uid://d0x5t5rguvfq" path="res://Assets/UI Assets/H_M_S Bars/HealthBar_cropped.png" id="10_ah6ud"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pmn57"]
atlas = ExtResource("1_h6rtr")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_idhe1"]
atlas = ExtResource("1_h6rtr")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj7kx"]
atlas = ExtResource("1_h6rtr")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0m2e"]
atlas = ExtResource("1_h6rtr")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_85n5r"]
atlas = ExtResource("1_h6rtr")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep41n"]
atlas = ExtResource("1_h6rtr")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgj0o"]
atlas = ExtResource("1_h6rtr")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgxbj"]
atlas = ExtResource("1_h6rtr")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfagy"]
atlas = ExtResource("2_hgn4g")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_quudr"]
atlas = ExtResource("2_hgn4g")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vlr8"]
atlas = ExtResource("2_hgn4g")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g30pg"]
atlas = ExtResource("2_hgn4g")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_83fl5"]
atlas = ExtResource("1_wfwu2")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2unm"]
atlas = ExtResource("1_wfwu2")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulmc8"]
atlas = ExtResource("1_wfwu2")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0srpd"]
atlas = ExtResource("1_wfwu2")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_17m16"]
atlas = ExtResource("2_mhh77")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyaxj"]
atlas = ExtResource("2_mhh77")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6j7u"]
atlas = ExtResource("2_mhh77")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fed6c"]
atlas = ExtResource("2_mhh77")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_t10vr"]
atlas = ExtResource("2_mhh77")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo1fv"]
atlas = ExtResource("2_mhh77")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5mfo"]
atlas = ExtResource("2_mhh77")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqd0x"]
atlas = ExtResource("2_mhh77")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_76lnb"]
atlas = ExtResource("2_mhh77")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_30adt"]
atlas = ExtResource("2_mhh77")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_co08m"]
atlas = ExtResource("2_mhh77")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r28qo"]
atlas = ExtResource("2_mhh77")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1urai"]
atlas = ExtResource("2_mhh77")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eosvf"]
atlas = ExtResource("2_mhh77")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f05o7"]
atlas = ExtResource("2_mhh77")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y76cy"]
atlas = ExtResource("2_mhh77")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_ld8nf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmn57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idhe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj7kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0m2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85n5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep41n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgj0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgxbj")
}],
"loop": false,
"name": &"Attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfagy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vlr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g30pg")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83fl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2unm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulmc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0srpd")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17m16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyaxj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6j7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fed6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t10vr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo1fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5mfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqd0x")
}],
"loop": true,
"name": &"Run (FAST)",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76lnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30adt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co08m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r28qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1urai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eosvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f05o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y76cy")
}],
"loop": true,
"name": &"Run (SLOW)",
"speed": 7.0
}]

[sub_resource type="Animation" id="Animation_xwfvc"]
resource_name = "Attack"
length = 0.55
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42, 0.49),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.43, 0.52),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.55),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"leaving_attack_state"
}]
}

[sub_resource type="Animation" id="Animation_op37e"]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"death_queue_free"
}]
}

[sub_resource type="Animation" id="Animation_bjbl2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Marker2D/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_klblp"]
_data = {
"Attack": SubResource("Animation_xwfvc"),
"Death": SubResource("Animation_op37e"),
"RESET": SubResource("Animation_bjbl2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gpt6k"]
size = Vector2(24, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eka16"]
size = Vector2(66, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pk45j"]
size = Vector2(264, 112)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0y00r"]
height = 92.3479

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ja2hg"]
size = Vector2(32, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p45vf"]
size = Vector2(22, 34)

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_f6oy3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
position = Vector2(0, -26)
sprite_frames = SubResource("SpriteFrames_ld8nf")
animation = &"Attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_klblp")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -15.5)
shape = SubResource("RectangleShape2D_gpt6k")

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="IdleWalkTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="PlayerDetectedTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="RunTimer" type="Timer" parent="Timers"]
wait_time = 0.9
one_shot = true

[node name="ExposedTimer" type="Timer" parent="Timers"]
wait_time = 1.25
one_shot = true

[node name="WaitTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HurtboxEnteredTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="HealthBarTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Raycasts" type="Node2D" parent="."]

[node name="LedgeCheckRight" type="RayCast2D" parent="Raycasts"]
position = Vector2(3, 0)
target_position = Vector2(0, 49)

[node name="LedgeCheckLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2(-3, 0)
target_position = Vector2(0, 49)

[node name="WallCheckLeftBottom" type="RayCast2D" parent="Raycasts"]
position = Vector2(-10, -6)
rotation = 1.5708
target_position = Vector2(4.72069e-05, 13)

[node name="WallCheckLeftMiddle" type="RayCast2D" parent="Raycasts"]
position = Vector2(-10, -23)
rotation = 1.5708
target_position = Vector2(4.76837e-05, 13)

[node name="WallCheckLeftTop" type="RayCast2D" parent="Raycasts"]
position = Vector2(-10, -39)
rotation = 1.5708
target_position = Vector2(4.95911e-05, 13)

[node name="WallCheckLeftAbove" type="RayCast2D" parent="Raycasts"]
position = Vector2(-10, -57)
rotation = 1.5708
target_position = Vector2(4.95911e-05, 13)

[node name="WallCheckRightBottom" type="RayCast2D" parent="Raycasts"]
position = Vector2(10, -6)
rotation = -1.5708
target_position = Vector2(-4.72069e-05, 13)

[node name="WallCheckRightMiddle" type="RayCast2D" parent="Raycasts"]
position = Vector2(10, -23)
rotation = -1.5708
target_position = Vector2(-4.76837e-05, 13)

[node name="WallCheckRightTop" type="RayCast2D" parent="Raycasts"]
position = Vector2(10, -39)
rotation = -1.5708
target_position = Vector2(-4.95911e-05, 13)

[node name="WallCheckRightAbove" type="RayCast2D" parent="Raycasts"]
position = Vector2(10, -57)
rotation = -1.5708
target_position = Vector2(-4.95911e-05, 13)

[node name="ActorDetectionZoneClose" parent="." instance=ExtResource("6_wvijm")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="ActorDetectionZoneClose" index="0"]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_eka16")

[node name="ActorDetectionZoneFar" parent="." instance=ExtResource("6_wvijm")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="ActorDetectionZoneFar" index="0"]
position = Vector2(0, -27)
shape = SubResource("RectangleShape2D_pk45j")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="AttackHitbox" parent="Marker2D" instance=ExtResource("7_emsn0")]
collision_layer = 64
collision_mask = 4
damage = 20.0

[node name="CollisionShape2D" parent="Marker2D/AttackHitbox" index="0"]
position = Vector2(0, -24)
rotation = -1.213
shape = SubResource("CapsuleShape2D_0y00r")

[node name="Hurtbox" parent="." instance=ExtResource("8_h7abw")]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -17.5)
shape = SubResource("RectangleShape2D_ja2hg")

[node name="Hitbox" parent="." instance=ExtResource("7_emsn0")]
collision_layer = 64
collision_mask = 0
damage = 15.0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_p45vf")

[node name="Health" type="Node2D" parent="."]

[node name="HealthBarEmpty" type="Sprite2D" parent="Health"]
visible = false
self_modulate = Color(0.392157, 0.392157, 0.392157, 1)
z_index = 1
position = Vector2(0, -42)
scale = Vector2(0.75, 1)
texture = ExtResource("9_cxccl")

[node name="HealthbarFull" type="TextureRect" parent="Health"]
visible = false
z_index = 1
offset_left = -21.0
offset_top = -44.0
offset_right = 21.0
offset_bottom = -40.0
texture = ExtResource("9_cxccl")
expand_mode = 1

[node name="HealthBarEmpty1" type="Sprite2D" parent="Health"]
visible = false
z_index = 1
position = Vector2(1.2, -42)
scale = Vector2(0.719298, 0.666667)
texture = ExtResource("10_ah6ud")
region_enabled = true
region_rect = Rect2(28, 100, 57, 6)

[node name="HealthBarEmpty2" type="Sprite2D" parent="Health"]
visible = false
z_index = 1
position = Vector2(-1.2, -42)
scale = Vector2(0.719298, 0.666667)
texture = ExtResource("10_ah6ud")
flip_h = true
region_enabled = true
region_rect = Rect2(28, 100, 57, 6)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -18)
scale = Vector2(7.9, 5)

[node name="VisibleOnScreenNotifier2DLARGE" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(26, 26)

[connection signal="area_entered" from="Marker2D/AttackHitbox" to="." method="_on_attack_hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2DLARGE" to="." method="_on_visible_on_screen_notifier_2dlarge_screen_exited"]

[editable path="ActorDetectionZoneClose"]
[editable path="ActorDetectionZoneFar"]
[editable path="Marker2D/AttackHitbox"]
[editable path="Hurtbox"]
[editable path="Hitbox"]
